# nvoc

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NVOC_PYTHON_PLAN.md  SECURITY.md  pyproject.toml
.github/: actionlint.yaml
.github/workflows/: ci.yml  gpu-ci.yml
auto-optimizer/: Cargo.toml
auto-optimizer/files/: dyn_load_export_opencl_linux.sh  test_cuda.sh
auto-optimizer/openrc/: nvoc-vfp  nvoc-vfp.confd
auto-optimizer/src/: arg_help.rs  autoscan_config.rs  basic_func.rs  human.rs  main.rs  oc_profile_function.rs  oc_scanner.rs  platform.rs
auto-optimizer/test/: cli-stressor-cuda-rs.conf  deleteStartup.bat  dyn_load_export_windows.bat  registerStartup.bat  test_cuda_windows.bat  windows_recover.bat  windows_start.bat  windows_start_legacy.bat  windows_start_ultrafast.bat
cli-stressor-cuda/: README.md  pyproject.toml  test.py  test_non_gpu_ci.py
cli-stressor-cuda-rs/: Cargo.toml  README.md
cli-stressor-cuda-rs/src/: cuda_backend.rs  lib.rs  main.rs  style.rs  vulkan_gfx_stressor.rs
cli-stressor-cuda-rs/tests/: no_gpu.rs
cli-stressor-cuda/cli_stressor_cuda/: __init__.py  cli.py  config.py  device.py  kernels.py  models.py  parsing.py  runner.py  validation.py
docs/: boot-vfp-loading.md
gui/: main.py  nvoc_gui_config.json  pyproject.toml
gui/src/: app.py  cli_runner.py  config.py
gui/src/backend/: __init__.py  base.py  cli.py  native.py
gui/src/controllers/: __init__.py  fan_control.py
gui/src/panes/: __init__.py  fan_control.py
gui/src/tabs/: autoscan.py  dashboard.py  fan_control.py  overclock.py  vfcurve.py
gui/src/widgets/: hover_tooltip.py  lightweight_controls.py  output_console.py
gui/tests/: conftest.py  test_fan_control.py  test_native_backend.py
nvoc-core/: API_GAPS.md  Cargo.toml
nvoc-core/src/: color.rs  conv.rs  error.rs  gpu.rs  gpu_type.rs  lib.rs  nvapi.rs  nvml.rs  operation.rs  result.rs  target.rs
nvoc-core/tests/: gpu_readonly.rs  gpu_write_conservative.rs  non_gpu.rs
nvoc-python/: Cargo.toml  pyproject.toml
nvoc-python/python/pynvoc/: __init__.py
nvoc-python/src/: lib.rs
nvoc-python/tests/: test_gpu.py  test_import.py  test_validation.py
tui/: README.md  nvoc_tui.spec  pyproject.toml
tui/nvoc_tui/: app.py  config.py  models.py  native.py  parsing.py
tui/nvoc_tui/controllers/: console.py  dashboard.py  header.py  overclock.py  vfcurve.py
tui/nvoc_tui/panes/: console.py  dashboard.py  header.py  vfcurve.py
tui/nvoc_tui/styles/: console.tcss  vfcurve.tcss
tui/tests/: test_config.py  test_controllers.py  test_native.py  test_parsing.py
