[workspace]
members = [
  "nvoc-core",
  "auto-optimizer",
  "srv",
  "cli-stressor-cuda-rs",
  "nvoc-python",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"

[profile.release]
incremental = true
panic = "abort"
opt-level = 2
lto = "thin"
codegen-units = 8

[workspace.dependencies]
nvoc-core = { path = "./nvoc-core" }
nvoc-auto-optimizer = { path = "./auto-optimizer" }

anyhow = "*"
async-stream = "0.3"
chrono = "0.4"
clap = { version = "4.5.60", features = [
  "std",
  "help",
  "usage",
  "error-context",
  "derive"
] }
compio = { version = "0.15.0", features = ["runtime", "time"] }
csv = "1.4.0"
futures-util = "0.3"
flume = "0.11"
humantime = "2.2.0"
log = "0.4"
log2 = "0.2.2"
gag = "1.0.0"
colored = "3.1.1"
num-traits = "0.2.19"
nvml-wrapper = "0.12.0"
nvml-wrapper-sys = "0.9.0"
nvapi-hi = { version = "0.2.0", features = [
  "serde",
], git = "https://github.com/arcnmx/nvapi-rs", branch = "v0.2.x" }
nvapi-sys = { git = "https://github.com/arcnmx/nvapi-rs", branch = "v0.2.x" }
nvapi = { git = "https://github.com/arcnmx/nvapi-rs", branch = "v0.2.x" }
quick-error = "2.0.1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-service = "0.8.0"
windows-sys = { version = "0.61.2", features = ["Win32"] }
