[package]
name = "nvoc-auto-optimizer"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

description = "NVIDIA GPU curve optimizer"
keywords = ["nvidia", "gtx", "gpu", "nvapi", "overclock"]

readme = "README.md"
license = "Apache-2.0"

include = ["/src/**", "/README*", "/LICENSE*"]

[dependencies]
nvoc-core = { workspace = true }
nvml-wrapper = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
