[package]
name = "cli-stressor-cuda-rs"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"

description = "Rust CUDA GEMM stressor with validation sidecar"

[features]
default = []
cuda = ["dep:cudarc", "dep:half"]
vulkan = ["ash"]

[dependencies]
clap = { workspace = true }
rand = "0.9"
rand_distr = "0.5"
matrixmultiply = "0.3.10"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anstream = "1.0.0"
anstyle = "1.0.14"
cudarc = { version = "0.19.7", optional = true, features = ["f16","nvrtc","cuda-12090"] }
half = { version = "2.7.1", optional = true }
ash = { version = "0.38", optional = true }
