[project]
dependencies = [
  "numpy==2.4.4",
  "torch==2.9.0",
]
description = "A CUDA Performance Test Tool"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
name = "torch-performance-test-data"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
version = "0.1.0"
[tool.uv.sources]
torch = [
  {index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"

[project.scripts]
cli_stressor_cuda = "cli_stressor_cuda.cli:main"
