[project]
name = "nvoc-gui"
version = "0.1.0"
description = "GUI frontend for nvoc-auto-optimizer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "matplotlib>=3.7.5,<3.9; python_version < '3.9'",
    "matplotlib>=3.9.4,<3.10; python_version >= '3.9' and python_version < '3.10'",
    "matplotlib>=3.10; python_version >= '3.10'",
    "numpy>=1.24.4,<2; python_version < '3.9'",
    "numpy>=2.0; python_version >= '3.9'",
    "packaging>=24.0",
    "pillow>=10.4.0",
    "pystray>=0.19.5",
    "six>=1.17.0",
    "pyinstaller~=6.19.0",
]

[dependency-groups]
build = [
    "pyinstaller~=6.0",
]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
